--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,8 +2,13 @@ body{
   background: black;
 }
 .container{
-  width: 100vw;
-  height: 100vh;
+  padding:5%;
+  position: absolute;
+  left:5%;
+  top:5%;
+  width: 30vw;
+  height: 50vh;
+  background: gray;
 }
 svg{
   padding:5%;
@@ -13,14 +18,6 @@ svg{
 }
 circle:hover{
   cursor: pointer;
-}
-button{
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background: green;
-  z-index: 10;
 }
 button:hover{
   cursor: pointer;
