--- a/client/src/components/shop/style.css
+++ b/client/src/components/shop/style.css
@@ -1,7 +1,38 @@
 .shop{
   position: absolute;
-  width: 10px;
-  height:10px;
+  width: 20px;
+  height:20px;
   border-radius: 50%;
   cursor: pointer;
+  color: white;
+  border: none;
+}
+.normal{
+  cursor: pointer;
+  position: absolute;
+  width: 15px;
+  height:15px;
+  border-radius: 50%;
+  border: rgba(17, 186, 238, 0.315) solid 2px;
+
+}
+.fas{
+  background: transparent;
+  font-size: 20px;
+}
+.fa-skull{
+    box-shadow:
+     0 0 5px #fdfbdac0,0 0 10px #fdfbdac0, 0 0 20px #fdfbdac0;
+    /* inset 0 0 25px #fdfbdaa8,0 0 25px #fdfbdac0, 0 0 30px #fdfbdac0; */
+
+}
+.yellow{
+    box-shadow:
+     0 0 3px #fdf25a8f,0 0 5px #fdf25a8f, 0 0 10px #fdf25a8f,
+    inset 0 0 20px #fdf25abb,0 0 25px #fdf25a8f, 0 0 30px #fdf25a8f;
+}
+.red{
+    box-shadow:
+     0 0 3px #d81a1a8f,0 0 5px #d81a1a8f, 0 0 10px #d81a1a8f,
+    inset 0 0 20px #d81a1ace,0 0 25px #d81a1a8f, 0 0 30px #d81a1a8f;
 }
