--- a/client/src/components/shop/style.css
+++ b/client/src/components/shop/style.css
@@ -22,7 +22,7 @@
   width: 50vw;
   height: 50vh;
   transform: translate(-50%,-50%) ;
-  /* background: rgba(12, 12, 12, 0.767); */
+  background: rgba(12, 12, 12, 0.767);
   border-radius: 20px;
   /* border: rgba(17, 186, 238, 0.2) solid 1px; */
 }
@@ -47,10 +47,94 @@ line{
   stroke-dasharray: 1500;
   stroke-dashoffset: 1500;
   animation: grow 3s linear forwards;
+  animation-timing-function:ease-in-out
+
+}
+.line1{
+  stroke: rgb(255,0,0,0.6);
+  stroke-width: 3px;
+}
+.line2{
+  stroke: rgb(255,0,0,0.6);
+  stroke-width: 3px ;
+  animation-delay: 2s;
+}
+.line3{
+  stroke: rgb(255,255,0,0.4);
+  stroke-width:3px;
+  animation-delay: 4s;
+}
+.line4{
+  stroke: rgb(255,255,0,0.5);
+  stroke-width: 1px; 
+  animation-delay: 6s;
 }
 @keyframes grow {
   to{
     stroke-dashoffset: 0;
+  }
+}
+@keyframes fadeInYellow{
+  0%{
+  border: rgba(17, 186, 238, 0.726) solid 2px;
+  color:rgba(17, 186, 238, 0.85);
+  }
+  80%{
+  border: rgba(17, 186, 238, 1) solid 2px;
+  color:rgba(17, 186, 238, 1);
+  }
+  100%{
+  color:rgba(255, 255, 0, 0.726) ;
+  border: rgba(255, 255, 0, 0.6) solid 2px;
+  background: black;
+  z-index: 9;
+  }
+}@keyframes fadeInYellowNormal{
+  0%{
+  border: rgba(17, 186, 238, 0.315) solid 2px;
+  color:rgba(17, 186, 238, 0.315);
+  }
+  90%{
+  border: rgba(17, 186, 238, 0.7) solid 2px;
+  color:rgba(17, 186, 238, 0.7);
+  }
+  100%{
+  color:rgba(255, 255, 0, 0.726) ;
+  border: rgba(255, 255, 0, 0.6) solid 2px;
+  background: black;
+  z-index: 10;
+  }
+}
+@keyframes fadeInRed{
+  0%{
+  border: rgba(17, 186, 238, 0.726) solid 2px;
+  color:rgba(17, 186, 238, 0.85);
+  }
+  30%{
+  border: rgba(17, 186, 238, 1) solid 2px;
+  color:rgba(17, 186, 238, 1);
+  }
+  100%{
+  color:rgba(255, 0, 0, 0.8) ;
+  border: rgba(255, 0, 0, 0.6) solid 2px;
+  background: black;
+  z-index: 11;
+  }
+}
+@keyframes fadeInRedNormal{
+  0%{
+  border: rgba(17, 186, 238, 0.315) solid 2px;
+  color:rgba(17, 186, 238, 0.315);
+  }
+  50%{
+  border: rgba(17, 186, 238, 0.7) solid 2px;
+  color:rgba(17, 186, 238, 0.7);
+  }
+  100%{
+  color:rgba(255, 0, 0, 0.726) ;
+  border: rgba(255, 0, 0, 0.6) solid 2px;
+  background: black;
+  z-index: 12;
   }
 }
 .normal{
@@ -62,27 +146,24 @@ line{
   border: rgba(17, 186, 238, 0.315) solid 2px;
   /* z-index: 10; */
 }
-.yellow{
-  background: black;
-  z-index: 10;
-  color:rgba(255, 255, 0, 0.726) ;
-  border: rgba(255, 255, 0, 0.438) solid 2px;
-    /* box-shadow:
-     0 0 3px #fdf25a8f,0 0 5px #fdf25a8f, 0 0 10px #fdf25a8f,
-    inset 0 0 20px #fdf25abb,0 0 25px #fdf25a8f, 0 0 30px #fdf25a8f; */
+.yellow.shop{
+  animation: fadeInYellow 6s linear forwards;
 }
-.red{
-  background: black;
-  z-index: 10;
-  color:  rgba(255, 0, 0, 0.644);
-  border: rgba(255, 0, 0, 0.644) solid 2px;
+.yellow.normal{
+  animation: fadeInYellowNormal 8s linear forwards;
+}
+.red.shop{
+  animation: fadeInRed 1.5s linear forwards;
+}
+.red.normal{
+  animation: fadeInRedNormal 4s linear forwards;
 }
 .primary{
   background: black;
   z-index: 10;
   color:white;
   border: rgba(255, 255, 255, 0.7) solid 2px;
-    box-shadow:0 0 5px rgba(255, 255, 255, 0.5),0 0 10px rgba(255, 255, 255, 0.5), 0 0 30px rgba(255, 255, 255, 0.5);
+    box-shadow:0 0 10px rgba(255, 0, 0, 1),0 0 15px rgba(255, 0, 0, 1), 0 0 20px rgba(255, 0, 0, 1);
 }
 #reset{
   position: absolute;
@@ -101,6 +182,20 @@ line{
   position: absolute;
   bottom: 2%;
   right: 15%;
+  margin: 5px;
+  border: rgba(17, 186, 238, 0.915) solid 2px;
+  border-radius: 50px;
+  width: 6em;
+  height: 3em;
+  background: black;
+  color: rgba(17, 186, 238, 0.915);
+  outline: none;
+}
+.buttonContainer{
+  position: absolute;
+  bottom: 2%;
+}
+.buttonContainer button{
   margin: 5px;
   border: rgba(17, 186, 238, 0.915) solid 2px;
   border-radius: 50px;
