--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,16 +1,21 @@
 body{
-  background: black;
+  background: rgb(51, 51, 51);
 }
-
+h1{
+  display: block;
+  text-align: center;
+  color: white;
+}
+/* 
 svg{
   padding:5%;
   position: fixed;
   width: 100vw;
   height: 100vh;
-}
-circle:hover{
+} */
+/* circle:hover{
   cursor: pointer;
 }
 button:hover{
   cursor: pointer;
-}
+} */
