--- a/client/src/components/shop/style.css
+++ b/client/src/components/shop/style.css
@@ -12,7 +12,6 @@
 .shop span{
   vertical-align: middle;
   line-height:30px;
-
 }
 .container{
   padding:5%;
@@ -22,12 +21,11 @@
   width: 50vw;
   height: 50vh;
   transform: translate(-50%,-50%) ;
-  background: rgba(12, 12, 12, 0.767);
+  /* background: rgba(7, 233, 7, 0.808); */
+  background: rgb(7, 7, 7);
   border-radius: 20px;
-  /* border: rgba(17, 186, 238, 0.2) solid 1px; */
 }
 svg{
-  /* padding:5%; */
   position: fixed;
   left:50%;
   top:50%;
@@ -36,12 +34,6 @@ svg{
   transform: translate(-50%,-50%) ;
   pointer-events: none;
   z-index: 5;
-  /* position: fixed;
-  top:0%;
-  left:0%;
-  width: 100%;
-  height: 100%; */
-  /* background: rgba(255, 255, 0, 0.336); */
 }
 line{
   stroke-dasharray: 1500;
@@ -166,6 +158,7 @@ line{
     box-shadow:0 0 10px rgba(255, 0, 0, 1),0 0 15px rgba(255, 0, 0, 1), 0 0 20px rgba(255, 0, 0, 1);
 }
 #reset{
+  cursor: pointer;
   position: absolute;
   bottom: 2%;
   right: 5%;
@@ -179,6 +172,7 @@ line{
   outline: none;
 }
 #clearLine{
+  cursor: pointer;
   position: absolute;
   bottom: 2%;
   right: 15%;
@@ -204,5 +198,6 @@ line{
   background: black;
   color: rgba(17, 186, 238, 0.915);
   outline: none;
+  cursor: pointer;
 
 }
