--- a/client/src/components/headBar/style.css
+++ b/client/src/components/headBar/style.css
@@ -1,13 +1,26 @@
 
 .headBar{
   position: absolute;
-  top:1%;
-  left:2vw;
-  display: flexbox;
-  width: 50vw;
-  height: 2vh;
+  top:0;
+  left:0;
+  display: flex;
+  width: 100vw;
+  height: 6vh;
   align-items: center;
   /* border: rgba(17, 186, 238, 0.915) solid 1px; */
+  background: rgb(5, 5, 5);
+}
+.logo{
+  /* width: 2vw;
+  height: 2vw; */
+  /* background: white; */
+  color: white;
+  /* border-radius: 50%; */
+  margin-left:2%;
+  margin-right: 2%;
+}
+.logo span{
+  font-size: 30px;
 }
 .headBar select{
   margin: 10px;
@@ -20,19 +33,20 @@
 .headBar h3{
   display: inline;
   color: rgba(255, 255, 255, 0.705);
-  margin-right: 2%;
+  margin-right: 1%;
 }
 .headBar input{
-  height: 2vh;
+  height: 2.5vh;
+  width: 15vw;
   padding-left: 15px;
   color: white;
   background: rgb(17, 17, 17);
   border: none;
   outline: none;
-  border-radius: 10px;
+  border-radius: 5px;
   margin-right: 10px;
 }
-#tag{
+#search{
   width: 3vw;
   height: 3vh;
   font-size: 0.75vw;
@@ -45,6 +59,22 @@
   border-radius: 50px;
   background: transparent;
   margin-left: -1%;
+}
+#tag{
+  font-size: 1em;
+  font-weight:500 ;
+  /* width: 5em; */
+  height: 2em;
+  color: rgba(17, 186, 238, 0.915);
+  /* border: rgba(17, 186, 238, 0.915) solid 2px; */
+  border: none;
+  border-radius: 50%;
+  outline: none;
+  cursor: pointer;
+  border-radius: 50px;
+  background: transparent;
+  margin-right: 1%;
+
 }
 #random{
   font-size: 1em;
