--- a/client/src/components/card/style.css
+++ b/client/src/components/card/style.css
@@ -34,6 +34,19 @@
   color: rgba(255, 255, 255, 0.603);
   cursor: pointer;
 }
+.card details{
+  color: rgba(255, 255, 255, 0.603);
+  cursor: pointer;
+}
+.card li{
+  color: rgba(255, 255, 255, 0.603);
+  cursor: pointer;
+}
+.card p{
+  color: rgba(255, 255, 255, 0.603);
+  cursor: pointer;
+
+}
 .qr{
   /* display: block; */
   /* position: absolute;
