--- a/client/src/components/headBar/style.css
+++ b/client/src/components/headBar/style.css
@@ -56,7 +56,8 @@
   padding-left: 15px;
   color: white;
   background: rgb(17, 17, 17);
-  border: none;
+  /* color: rgba(17, 186, 238, 0.915); */
+  border: rgba(17, 186, 238, 0.915) solid 1.5px;
   outline: none;
   border-radius: 5px;
   margin-right: 10px;
