--- a/client/src/components/card/style.css
+++ b/client/src/components/card/style.css
@@ -35,17 +35,60 @@
   /* border-radius: 20px; */
 
 }
+.date{
+  display: flexbox;
+  position: relative;
+
+}
+.date h3{
+  display: inline;
+}
 .card summary{
   outline: none;
-  margin: 2%;
+  margin: 3%;
   color: rgba(255, 255, 255, 0.603);
   cursor: pointer;
+  transition: 0.5s;
+}
+summary::-webkit-details-marker{
+  /* background: none;
+  color: transparent; */
+  display: none;
+}
+details[open] summary ~ *{
+  animation: open 0.8s ease-in-out ;
+}
+details[open] summary span{
+  transform: rotateZ(90deg);
+}
+@keyframes open{
+  from{
+    opacity: 0; margin-top: -10px;
+  }
+   to{
+    opacity: 1; margin-top: 0;
+  }
+}
+.card summary span{
+  transition: 0.5s;
 }
 .content{
-  margin-left: 5%;
+  text-align: start;
+  position: relative;
+  left:20%;
+  margin-bottom: 5%;
+}
+.content h3{
+  display: block;
+  text-align: start;
 }
 .content p{
-  margin-left: 5%;
+  display: block;
+  text-align: start;
+  position: relative;
+  left:0%;
+  margin-top: 5px;
+  margin-bottom: 5px;
 
 }
 .card details{
