--- a/client/src/components/svgLines/style.css
+++ b/client/src/components/svgLines/style.css
@@ -62,14 +62,27 @@ line{
   animation-delay: 6s;
   transition:ease-in-out 0.8s;
 }
+svg text{
+  display: none;
+}
+.highLightlinetext{
+  text-anchor: middle;
+  position: absolute;
+  top:-10%;
+  display: inline;
+  font-size: 1em;
+  fill: rgb(255, 255, 255);
+  transition:ease-in-out 0.5s;
+  /* background: white; */
+}
 .highLight{
-  stroke: rgba(255, 255, 255, 0.9);
+  stroke: rgba(255, 255, 255, 0.801);
   stroke-width: 2px; 
   /* opacity: 1; */
   transition:ease-in-out 0.5s;
 }
 .highLightend{
-  stroke: rgba(255, 255, 255, 0.9);
+  stroke: rgba(255, 255, 255, 0.801);
   stroke-width: 3px; 
   /* opacity: 1; */
   transition:ease-in-out 0.5s;
