--- a/client/src/components/card/style.css
+++ b/client/src/components/card/style.css
@@ -12,6 +12,7 @@
   border-radius: 20px;
   align-items: center;
   flex-direction: column;
+  z-index: 100;
 }
 .card h1{
   color: rgba(255, 255, 255, 0.603);
