--- a/client/src/components/headBar/style.css
+++ b/client/src/components/headBar/style.css
@@ -9,6 +9,7 @@
   align-items: center;
   /* border: rgba(17, 186, 238, 0.915) solid 1px; */
   background: rgb(5, 5, 5);
+  z-index: 100;
 }
 .logo{
   /* width: 2vw;
