--- a/client/src/components/shop/style.css
+++ b/client/src/components/shop/style.css
@@ -13,6 +13,20 @@
   vertical-align: middle;
   line-height:30px;
 }
+.veil{
+  padding:5%;
+  position: fixed;
+  pointer-events: none;
+  left:50%;
+  top:50%;
+  width: 60vw;
+  height: 60vh;
+  transform: translate(-50%,-50%) ;
+  background: rgba(0, 0, 0, 0);
+  z-index: 15;
+  transition: 0.5s ease-in-out;
+  border-radius: 20px;
+}
 .container{
   padding:5%;
   position: absolute;
