--- a/client/src/components/svgLines/style.css
+++ b/client/src/components/svgLines/style.css
@@ -7,7 +7,8 @@ svg{
   height: 100vh;
   transform: translate(-50%,-50%) ;
   pointer-events: none;
-  z-index: 5;
+  z-index: 20;
+  /* background: rgba(0, 0, 0, 0.205); */
 }
 
 line{
