added scroll bar

--- a/client/src/components/headBar/style.css
+++ b/client/src/components/headBar/style.css
@@ -45,6 +45,7 @@
   display: inline;
   color: rgba(255, 255, 255, 0.705);
   margin-right: 5px;
+  font-family: sans-serif;
 }
 .headBar h3{
   display: inline;
