--- a/client/src/components/card/style.css
+++ b/client/src/components/card/style.css
@@ -17,24 +17,54 @@
 .card h1{
   color: rgba(255, 255, 255, 0.603);
   text-align: start;
+  font-size: 1.8em;
+  font-family: sans-serif;
 }
 .card h2{
   color: rgba(255, 255, 255, 0.603);
   text-align: start;
+  font-size: 1.2em;
+  font-family: sans-serif;
+  font-weight: 400;
 
 }
 .card h3{
   text-align: center;
   color: rgba(255, 255, 255, 0.692);
+  font-family: sans-serif;
 }
 .cardContainer{
+  margin-left: 2vw;
   /* justify-content: space-between; */
   /* align-items: center; */
   /* padding: 10%; */
   position: absolute;
+  height: 72vh;
+  width: 15vw;
   top:3%;
+  /* border:white solid 1px; */
+  overflow-y:auto;
+  overflow-x: hidden;
   /* border-radius: 20px; */
+}
+::-webkit-scrollbar {
+  width: 5px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(17, 186, 238, 0.5); 
+  border-radius: 10px;
+}
 
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(17, 186, 238, 0.712); 
 }
 .date{
   display: flexbox;
@@ -50,6 +80,8 @@
   color: rgba(255, 255, 255, 0.801);
   cursor: pointer;
   transition: 0.5s;
+  font-family: sans-serif;
+  font-weight: 500;
 }
 
 details span{
@@ -93,6 +125,8 @@ details[open] summary span{
   left:0%;
   margin-top: 5px;
   margin-bottom: 5px;
+  font-family: sans-serif;
+  font-weight: 400;
 
 }
 .card details{
@@ -107,7 +141,9 @@ details[open] summary span{
 .card p{
   color: rgba(255, 255, 255, 0.76);
   cursor: pointer;
-
+}
+.searchLink{
+  text-decoration: underline;
 }
 .qr{
   /* display: block; */
