--- a/client/src/components/guilde/style.css
+++ b/client/src/components/guilde/style.css
@@ -11,7 +11,10 @@
   z-index: 100;
   pointer-events: none;
   background: rgba(0, 0, 0, 0.233);
-  backdrop-filter: blur(2px);
+  backdrop-filter: blur(5px);
+  font-family: sans-serif;
+  font-size: 1em;
+  font-weight: 300;
 }
 .guide .far{
   font-size: 2em;
