--- a/client/src/components/card/style.css
+++ b/client/src/components/card/style.css
@@ -17,13 +17,14 @@
 .card h1{
   color: rgba(255, 255, 255, 0.603);
   text-align: start;
-  font-size: 1.8em;
+  margin-top: 3vh;
+  font-size: clamp(1em,1.2vw,1.8em);
   font-family: sans-serif;
 }
 .card h2{
   color: rgba(255, 255, 255, 0.603);
   text-align: start;
-  font-size: 1.2em;
+  font-size: clamp(0.8em,1vw,1.2em);
   font-family: sans-serif;
   font-weight: 400;
 
@@ -32,6 +33,7 @@
   text-align: center;
   color: rgba(255, 255, 255, 0.692);
   font-family: sans-serif;
+  font-size: clamp(0.8em,1vw,1.5em);
 }
 .cardContainer{
   margin-left: 2vw;
@@ -82,6 +84,7 @@
   transition: 0.5s;
   font-family: sans-serif;
   font-weight: 500;
+  font-size: clamp(0.8em,1vw,1.5em);
 }
 
 details span{
@@ -141,6 +144,7 @@ details[open] summary span{
 .card p{
   color: rgba(255, 255, 255, 0.76);
   cursor: pointer;
+  font-size: clamp(0.5em,0.8vw,1.2em);
 }
 .searchLink{
   text-decoration: underline;
