--- a/client/src/components/shop/style.css
+++ b/client/src/components/shop/style.css
@@ -1,7 +1,7 @@
 .shop{
   position: absolute;
-  width: 30px;
-  height:30px;
+  width: 1.2vw;
+  height:1.2vw;
   border-radius: 50%;
   cursor: pointer;
   border: rgba(17, 186, 238, 0.726) solid 2px;
@@ -10,8 +10,18 @@
   background: black;
 }
 .shop span{
+  font-size: 0.7vw;
   vertical-align: middle;
-  line-height:30px;
+  line-height:1.1vw;
+}
+.normal{
+  cursor: pointer;
+  position: absolute;
+  width: 0.5vw;
+  height:0.5vw;
+  border-radius: 50%;
+  border: rgba(17, 186, 238, 0.315) solid 2px;
+  /* z-index: 10; */
 }
 .veil{
   padding:5%;
@@ -127,15 +137,6 @@
   background: black;
   z-index: 12;
   }
-}
-.normal{
-  cursor: pointer;
-  position: absolute;
-  width: 10px;
-  height:10px;
-  border-radius: 50%;
-  border: rgba(17, 186, 238, 0.315) solid 2px;
-  /* z-index: 10; */
 }
 .yellow.shop{
   animation: fadeInYellow 6s linear forwards;
